# SoftDev-chanllenges

./: README.md
dev1/: _wq  makefile
dev2/: lame_project.tgz
dev2/all/: lame_project.tgz
dev2/all/demo/: configure  configure.ac
dev2/all/demo/autom4te.cache/: output.1  traces.0  traces.1
dev2/all/demo/src/: Makefile.am  func.c  func.h  main.c
dev2/all/helloworld/: Makefile  Makefile.in  config.status  configure  configure.in  helloworld  helloworld.c
dev2/all/helloworld/autom4te.cache/: output.0  output.2  traces.0  traces.1  traces.2
dev2/all/project/: configure.ac
dev2/all/project2/: Makefile  config.h  config.h.in  config.status  configure  configure.ac
dev2/all/project2/autom4te.cache/: output.0  traces.0  traces.1
dev2/all/project2/src/: Makefile  Makefile.in
dev2/all/project2/src/lib_foo/: Makefile  Makefile.am  Makefile.in
dev2/all/project2/src/main/: Makefile  Makefile.am  Makefile.in
dev2/all/result/: lame_project.tgz
dev2/all/result/project/: configure.ac
dev2/all/result/project/main/: Makefile.am
dev2/project/: configure.ac
dev2/project/src/: Makefile.am
dev2/project/src/main/: Makefile.am
dev2/test/project/autom4te.cache/: output.0
python1/: 2python.py  newtest.txt  python1.py  test2.txt
python2/: SECRET  a.out  python2.py  test.c  test.py
python3/: demo.py  maze.map  optimize.py  python3.py  test.py  test2.py
shell1/: shell1.sh
shell2/: a  shell2.sh  test.sh  test.txt
shell3/: shell3.sh  test.sh
